:package: CI release version v1.1.0 from user ixxeL2097 [skip ci]

--- a/.github/workflows/AUTO_TAG.yaml
+++ b/.github/workflows/AUTO_TAG.yaml
@@ -7,15 +7,14 @@ on:
         required: true
         type: choice
         options:
-        - "fix"
-        - "minor"
-        - "major"
+          - "fix"
+          - "minor"
+          - "major"
         default: "fix"
         description: Kind of version bump
-
 jobs:
   auto-tag-repo:
-    uses: ixxeL-actions/workflows/.github/workflows/__auto-tag__.yaml@main
+    uses: ixxeL-actions/workflows/.github/workflows/__auto-tag__.yaml@v1.1.0
     with:
       increment: ${{ inputs.increment }}
       git-workdir: .github
