--- a/.github/workflows/__trunk-img-builder__.yaml
+++ b/.github/workflows/__trunk-img-builder__.yaml
@@ -232,6 +232,8 @@ jobs:
         uses: ixxeL-actions/workflows/.github/actions/detect-bump@main
         with:
           release-regex: '\s*:package: CI release of docker image ${{ inputs.component }}.+'
+          select-regex: '.+'
+          searching-deepness: 2
       - name: Bump version
         id: bump-version
         uses: ixxeL-actions/workflows/.github/actions/bump-version@main
